<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_-"
        android:hint="Only letters, digits, _ and - allowed"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_clean"
        android:title="@string/action_clean"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_last_searches"
        android:title="@string/action_last_searches"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>