<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="miempresa.com.bo.nytimesapp.DetailActivity">

    <include
        android:id="@+id/toolbarDetail"
        layout="@layout/toolbar_detail" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="136dp" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSnippet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/labelSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="@string/text_source"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="TextView"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/labelPubDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="@string/text_pub_date"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPubDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="TextView"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/labelUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="@string/text_url"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:autoLink="web"
            android:text="TextView"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
